# playground

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  design.cpp  prebuild.sh
agent/: AgentServer.cpp  CMakeLists.txt
app/: App.cpp  App.hpp  AppContext.cpp  AppContext.h  CMakeLists.txt  ChannelMsgProxy.cpp  ChannelMsgProxy.h  ChannelProxy.cpp  ChannelProxy.h  ChannelProxyDispatcher.cpp  ChannelProxyDispatcher.h  Performance.h
benchmark/: CMakeLists.txt  TestChannel.cpp  TestGate.cpp  todo.txt
channel/: .design.txt.swp  CMakeLists.txt  Channel.cpp  Channel.h  ChannelAgent.cpp  ChannelAgent.h  ChannelAgentMgr.cpp  ChannelAgentMgr.h  ChannelMessage.h  ChannelMessageDispatcher.cpp  ChannelMessageDispatcher.h  ChannelMessageHandler.cpp  ChannelMessageHandler.h  design.txt
client/: CMakeLists.txt  ConsoleClient.cpp  rgtdClient.cpp  todo.txt
client/gate/: CMakeLists.txt  GateClientHandler.cpp  GateClientHandler.h
component/: CMakeLists.txt  ConfigParser.cpp  ConfigParser.h  IniConfigParser.cpp  IniConfigParser.h  ProtoConfigParser.h  Timer.h  TimerMgr.cpp  TimerMgr.h
dataagent/: CMakeLists.txt  CacheAgent.cpp  CacheAgent.h  DBAgent.cpp  DBAgent.h  DataAgent.cpp  DataAgent.h  DataCenter.h  DataCommon.h  DataListener.cpp  DataListener.h  MemSerializer.cpp  MemSerializer.h  MetaSerializer.cpp  Readme.txt  RecoveryShareMem.cpp  RecoveryShareMem.h  RedisAgent.cpp  RedisAgent.h  ShareMemoryCenter.h
datacenter/: CMakeLists.txt  CacheAgent.cpp  CacheAgent.h  ConfigCenter.cpp  ConfigCenter.h  DBAgent.cpp  DBAgent.h  DataCenter.cpp  DataListener.cpp  DataListener.h  MetaSerializer.cpp  MetaSerializer.h  Readme.txt  RedisAgent.h  ResTableAgent.cpp  ResTableAgent.h  ShareMemoryCenter.cpp  ShareMemoryCenter.h
db/: CMakeLists.txt  DBAgent.cpp  DBAgent.h  DBTableHandler.cpp  DBTableHandler.h  MysqlAgent.cpp  MysqlAgent.h  MysqlCommandListener.cpp  MysqlCommandListener.h  MysqlDBMeta.cpp  MysqlDBMeta.h  MysqlMeta.cpp  MysqlMeta.h  MysqlProxy.cpp  MysqlProxy.h  db.txt
dep/: README.md  dep.md
dep/protobuf/: Makefile  config.h  config.status  libtool  protobuf.pc
dep/protobuf/gtest/: Makefile  Makefile.in  aclocal.m4  config.status  configure  libtool
dep/protobuf/gtest/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
dep/protobuf/gtest/build-aux/: config.h
dep/protobuf/src/: Makefile  protoc
dep/protobuf/src/.libs/: libprotobuf-lite.so.9.0.0  lt-protoc  protoc
dep/zeromq/: Makefile  config.status  configure  libtool
dep/zeromq/autom4te.cache/: output.2  requests  traces.0  traces.1
dep/zeromq/builds/msvc/: Makefile  Makefile.in
dep/zeromq/doc/: Makefile
dep/zeromq/foreign/openpgm/: Makefile
dep/zeromq/perf/: Makefile  inproc_lat  inproc_thr  local_lat  local_thr  remote_lat  remote_thr
dep/zeromq/perf/.deps/: inproc_lat.Po  inproc_thr.Po  local_lat.Po  local_thr.Po  remote_lat.Po  remote_thr.Po
dep/zeromq/perf/.libs/: inproc_lat  inproc_thr  local_lat  local_thr  remote_lat  remote_thr
dep/zeromq/src/: Makefile
dep/zeromq/src/.deps/: libzmq_la-address.Plo  libzmq_la-clock.Plo  libzmq_la-ctx.Plo  libzmq_la-dealer.Plo  libzmq_la-decoder.Plo  libzmq_la-dist.Plo  libzmq_la-encoder.Plo  libzmq_la-err.Plo  libzmq_la-fq.Plo  libzmq_la-io_object.Plo  libzmq_la-io_thread.Plo  libzmq_la-ip.Plo  libzmq_la-ipc_address.Plo  libzmq_la-ipc_connecter.Plo  (+33 more)
dep/zeromq/tests/: Makefile  test_connect_delay  test_connect_resolve  test_disconnect_inproc  test_hwm  test_invalid_rep  test_last_endpoint  test_monitor  test_msg_flags  test_pair_inproc  test_pair_ipc  test_pair_tcp  test_reqrep_device  test_reqrep_inproc  test_reqrep_ipc  test_reqrep_tcp  test_router_mandatory  test_shutdown_stress  test_sub_forward  test_term_endpoint  test_timeo
gate/: CMakeLists.txt  ConsoleConctroler.cpp  ConsoleConctroler.h  ConsoleControler.cpp  ConsoleControler.h  GateAgentChannelMsgHandler.cpp  GateAgentChannelMsgHandler.h  GateChannelProxy.cpp  GateChannelProxy.h  GateClientHandler.cpp  GateClientHandler.h  GateConsoleHandler.cpp  GateConsoleHandler.h  GateFrame.cpp  GateFrame.h  GateServer.cpp  GateServer.h  GateServerContext.cpp  GateServerContext.h  GateServerHandler.cpp  GateServerHandler.h  design.txt
gate/proto/: gate.proto
gate/proto/gate/: gate.pb.cc  gate.pb.h
proto/: CMakeLists.txt  generate.sh  meta.proto  readme.txt  test.proto
proto/base/: Role.proto
proto/cs/: .CSMsg.proto.swp  .CSMsgRole.proto.swp  CSMsg.proto  CSMsgRole.proto
proto/db/: Account.proto  LoginHistory.proto  Role.proto
proto/gate/: GateCSMsg.proto  GateSSMsg.proto  gate.proto
proto/meta/: meta.pb.cc  meta.pb.h
proto/res/: task.proto
proto/test/: meta.proto  test.proto
rgtd/: readme.txt
rgtd/client/: AgentClient.h
rgtd/zone/: AccountDBListener.h  AgentApp.cpp  AgentApp.h  CMakeLists.txt  CacheProxy.h  DBProxy.cpp  DBProxy.h  RoleDBListener.h  ZoneAgent.cpp  ZoneAgent.h  ZoneAgentMgr.cpp  ZoneAgentMgr.h
rgtd/zone/account/: AccountDBListener.cpp  AccountDBListener.h  AgentServer.cpp  LoginLogic.cpp  LoginLogic.h  PlayerAgent.cpp  PlayerAgent.h  RoleDBListener.cpp  RoleDBListener.h  Session.cpp  Session.h  SessionMgr.cpp  SessionMgr.h
rgtd/zone/cs_handler/: CSMsgHandler.cpp  CSMsgHandler.h  CSMsgLuaHandler.cpp  CSMsgLuaHandler.h  CSRoleHandler.cpp  CSRoleHandler.h
rgtd/zone/logic/: CSMsgDispatcher.cpp  CSMsgDispatcher.h  EventCenter.cpp  EventCenter.h  PlayerAutoSyncDBLogic.cpp  PlayerAutoSyncDBLogic.h  PlayerKnapsackLogic.cpp  PlayerKnapsackLogic.h  PlayerLogicCenter.cpp  PlayerLogicCenter.h  PlayerTaskLogic.cpp  PlayerTaskLogic.h
rgtd/zone/lua/: LuaContext.cpp  LuaContext.h  RgtdLuaLib.cpp  cs_handler.lua
service/: ChannelAgent.h  ChannelAgentMgr.h
test/: CMakeLists.txt  TestApp.cpp  TestCache.cpp  TestChannel.cpp  TestConfig.cpp  TestConfigCenter.cpp  TestDB.cpp  TestDataAgent.cpp  TestGate.cpp  TestMMPool.cpp  TestMemSeri.cpp  TestMysql.cpp  TestProtoBuf.cpp  TestRes.cpp  TestShm.cpp
tools/: CMakeLists.txt  todo.txt
zone/: AccountDBListener.h  AgentApp.cpp  AgentApp.h  AgentServer.cpp  RoleDBListener.cpp  ZoneAgentMgr.cpp  ZoneAgentMgr.h  todo.txt
(+113 files in other folders)
